# home-rescue-agent

./: .firebaserc  .gitignore  CLAUDE.md  Dockerfile  GEMINI_KEY.txt  README.md  agents-cli-manifest.yaml  conftest.py  firebase.json  pyproject.toml  walkthrough.md
.claude/: launch.json
app/: __init__.py  agent.py  fast_api_app.py  models.py  openapi_snapshot.json  seed_data.py  seed_store.py  store_mappers.py  turns.py
app/app_utils/: telemetry.py  typing.py
appliance_fixer/: __init__.py  agent.py  case_store.py  escalation.py  grounding.py  next_step.py  reopen.py  safety.py  tools.py  transitions.py
appliance_fixer/appliances/: __init__.py  fridge.py
docs/: APP_SPEC.md  BUILD_PLAN.md  CLOUDFLARE_DEPLOY_PLAN.md  CLOUD_RUN_DEPLOY.md  DESIGN.md  DESIGN_BRAINSTORM.md  DESIGN_COMPLETE.md  FRONTEND_DESIGN.md  IMPLEMENTATION_PLAN.md  MANUAL_GROUNDING_DESIGN.md  README.md  SMOKE_CHECKLIST.md  SPIKE_RESULTS.md  TEST_PLAN.md  UI_ESCALATION_TEST.md  tasks.jsonl
frontend/: app.js  index.html  style.css
home_rescue/: __init__.py  agent.py  case_store.py  escalation.py  firestore_store.py  grounding.py  media_store.py  next_step.py  reopen.py  safety.py  symptom_router.py  tools.py  transitions.py
home_rescue/appliances/: __init__.py  dishwasher.py  fridge.py
home_rescue/mcp_server/: __init__.py  client.py  fixtures.py  projections.py  server.py  toolset.py
mobile/: README.md  pubspec.yaml
mobile/config/: dev.json  prod.json
mobile/integration_test/: app_test.dart
mobile/lib/: config.dart  device_id.dart  main.dart  models.dart  nav.dart  theme.dart
mobile/test/: api_client_test.dart  escalation_screen_test.dart  home_screen_test.dart  (+6 more)
scripts/: build_mcp_fixtures.py  capture_fixtures.py  check_billing.py  e2e_demo.py  export_openapi.py  run_web.ps1  shot_cdp.py  shot_web.sh
spikes/: _gemini_client.py  diagnosis_spike.py  plate_read_spike.py
tests/: test_agent.py  test_agent_manual.py  test_agent_tools.py  test_case_store.py  test_escalation.py  test_gcp_backends.py  test_grounding.py  test_integration.py  test_mcp_fixtures.py  test_mcp_projections.py  test_next_step.py  test_reopen.py  test_safety.py  test_symptom_router.py  test_tools.py
(+56 files in other folders)
