[project]
name = "appliance-fixer"
version = "0.1.0"
description = "Appliance Fixer - camera-first appliance repair agent (ADK + Gemini)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "google-adk>=2.0.0,<3.0.0",
    "google-genai>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["appliance_fixer", "app"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
# Windows: the default %TEMP%\pytest-of-<user> dir is access-denied on this machine.
# conftest.py redirects the temp root into the repo (.tmp_pytest); we only disable the
# on-disk cache here (also unwritable in the default location).
addopts = "-p no:cacheprovider"
